force-app/main/default/objects/Lead/fields/Advanced_Amount__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Amount__c</fullName>
    <defaultValue>&quot;Between 60 to 90% of the invoice face value&quot;</defaultValue>
    <label>Advanced Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Between 60 to 90% of the invoice face value</fullName>
                <default>true</default>
                <label>Between 60 to 90% of the invoice face value</label>
            </value>
            <value>
                <fullName>Up to 90% of the invoice face value</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Up to 90% f the invoice face value</fullName>
                <isActive>false</isActive>
                <label>Up to 90% f the invoice face value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>