force-app/main/default/objects/Lead/fields/Advanced_Amount_Other__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Amount_Other__c</fullName>
    <label>Advanced Amount (Other)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>