force-app/main/default/objects/Lead/fields/Alternate_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Alternate Email Address</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>