force-app/main/default/objects/Lead/fields/Annual_Fees__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fees__c</fullName>
    <defaultValue>1500</defaultValue>
    <label>Annual Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>