force-app/main/default/objects/Lead/fields/Annual_Fees_Per_Trade_Partner__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fees_Per_Trade_Partner__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Annual Fees Per Trade Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>