force-app/main/default/objects/Lead/fields/Atradius_Comment__c.field-meta.xml
<CustomField>
    <fullName>Atradius_Comment__c</fullName>
    <label>Automation issues</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>