force-app/main/default/objects/Lead/fields/Atradius_Cover_Id__c.field-meta.xml
<CustomField>
    <fullName>Atradius_Cover_Id__c</fullName>
    <label>Atradius Cover Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>