force-app/main/default/objects/Lead/fields/Atradius_ID__c.field-meta.xml
<CustomField>
    <fullName>Atradius_ID__c</fullName>
    <label>Atradius ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>