force-app/main/default/objects/Lead/fields/Atradius_Status__c.field-meta.xml
<CustomField>
    <fullName>Atradius_Status__c</fullName>
    <label>Automation status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>