force-app/main/default/objects/Lead/fields/Average_Funding_Period__c.field-meta.xml
<CustomField>
    <fullName>Average_Funding_Period__c</fullName>
    <defaultValue>&quot;90 Days&quot;</defaultValue>
    <label>Average Funding Period</label>
    <length>250</length>
    <type>Text</type>
</CustomField>