force-app/main/default/objects/Lead/fields/Board_Seat_Required__c.field-meta.xml
<CustomField>
    <fullName>Board_Seat_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Seat Required</label>
    <type>Checkbox</type>
</CustomField>