force-app/main/default/objects/Lead/fields/Broker_Agent_fee_Comments__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_fee_Comments__c</fullName>
    <inlineHelpText>To put the detail of fee agreement from the Referral Agreement</inlineHelpText>
    <label>Broker / Agent fee Comments</label>
    <type>TextArea</type>
</CustomField>