force-app/main/default/objects/Lead/fields/Broker_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Company_Name__c</fullName>
    <formula>Brokers_leads__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Company Name</label>
    <type>Text</type>
</CustomField>