force-app/main/default/objects/Lead/fields/Broker_lead_owner__c.field-meta.xml
<CustomField>
    <fullName>Broker_lead_owner__c</fullName>
    <formula>Brokers_leads__r.Owner:User.FirstName + &apos; &apos; + Brokers_leads__r.Owner:User.LastName</formula>
    <label>Broker (lead) owner</label>
    <type>Text</type>
</CustomField>