force-app/main/default/objects/Lead/fields/Brokers_leads__c.field-meta.xml
<CustomField>
    <fullName>Brokers_leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokers (leads)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>lead Agent Origination</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Brokers</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>