force-app/main/default/objects/Lead/fields/Call_Box_Satus__c.field-meta.xml
<CustomField>
    <fullName>Call_Box_Satus__c</fullName>
    <label>Call Box Satus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment Set by SDR</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead</fullName>
            </value>
            <value>
                <fullName>Webinar Registration</fullName>
            </value>
            <value>
                <fullName>Marketing Qualified Lead and Webinar Registration,</fullName>
                <isActive>false</isActive>
                <label>Marketing Qualified Lead and Webinar Registration,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>