force-app/main/default/objects/Lead/fields/CCY__c.field-meta.xml
<CustomField>
    <fullName>CCY__c</fullName>
    <label>CCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCY</valueSetName>
    </valueSet>
</CustomField>