force-app/main/default/objects/Lead/fields/CL_Limit_Approval_CommentCredit_limit_Co__c.field-meta.xml
<CustomField>
    <fullName>CL_Limit_Approval_CommentCredit_limit_Co__c</fullName>
    <inlineHelpText>Credit Limit Approval from Risk Manager</inlineHelpText>
    <label>CL Limit Approval Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>