force-app/main/default/objects/Lead/fields/Comment_Risk__c.field-meta.xml
<CustomField>
    <fullName>Comment_Risk__c</fullName>
    <label>Comment Risk</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>