force-app/main/default/objects/Lead/fields/Credit_Limit_Provided_by_Insurer__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Provided_by_Insurer__c</fullName>
    <inlineHelpText>Credit Limit Provided by Insurer</inlineHelpText>
    <label>Credit Limit Provided by Insurer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>