force-app/main/default/objects/Lead/fields/Credit_Limit_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Credit Limit Approved by Risk Manager</inlineHelpText>
    <label>Credit Limit Submitted by Risk</label>
    <type>Checkbox</type>
</CustomField>