force-app/main/default/objects/Lead/fields/Credit_Limit_requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_requested__c</fullName>
    <inlineHelpText>Credit Limit requested</inlineHelpText>
    <label>Credit Limit requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>