force-app/main/default/objects/Lead/fields/Credit_Limit_Requested_CCY__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Requested_CCY__c</fullName>
    <inlineHelpText>Credit Limit requested Currency</inlineHelpText>
    <label>Credit Limit Requested CCY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCY</valueSetName>
    </valueSet>
</CustomField>