force-app/main/default/objects/Lead/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <label>Customer Type old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factoring Supplier</fullName>
            </value>
            <value>
                <fullName>Factoring Buyer</fullName>
            </value>
            <value>
                <fullName>Reverse Factoring Supplier</fullName>
            </value>
            <value>
                <fullName>Reverse Factoring Buyer</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>RAIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>