force-app/main/default/objects/Lead/fields/Date_2_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Date_2_Weeks__c</fullName>
    <formula>TODAY() - 15</formula>
    <label>Date - 2 Weeks</label>
    <type>Date</type>
</CustomField>