force-app/main/default/objects/Lead/fields/Date_Credit_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Credit_Limit_Requested__c</fullName>
    <label>Date Credit Limit Requested by Sales</label>
    <type>Date</type>
</CustomField>