force-app/main/default/objects/Lead/fields/Date_Credit_Limit_Requested_by_Risk__c.field-meta.xml
<CustomField>
    <fullName>Date_Credit_Limit_Requested_by_Risk__c</fullName>
    <label>Date Credit Limit Requested by Risk</label>
    <type>Date</type>
</CustomField>