force-app/main/default/objects/Lead/fields/Date_Onboarding_link_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Onboarding_link_Sent__c</fullName>
    <label>Date Onboarding link Sent</label>
    <type>Date</type>
</CustomField>