force-app/main/default/objects/Lead/fields/Date_Termsheet_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Termsheet_Sent__c</fullName>
    <label>Date Termsheet Sent</label>
    <type>Date</type>
</CustomField>