force-app/main/default/objects/Lead/fields/Date_Termsheet_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Termsheet_Signed__c</fullName>
    <label>Date TermSheet Signed</label>
    <type>Date</type>
</CustomField>