force-app/main/default/objects/Lead/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Increase Rejected</fullName>
            </value>
            <value>
                <fullName>Partially approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Bypass</fullName>
                <isActive>false</isActive>
                <label>Bypass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>