force-app/main/default/objects/Lead/fields/Dedicated_account_fee__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_account_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated account fee</label>
    <type>Checkbox</type>
</CustomField>