force-app/main/default/objects/Lead/fields/Email_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Email_Frequency__c</fullName>
    <label>Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Ad hoc</fullName>
            </value>
            <value>
                <fullName>No mailing lists!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>