force-app/main/default/objects/Lead/fields/Estimated_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Investment_Date__c</fullName>
    <label>Estimated Investment Date</label>
    <type>Date</type>
</CustomField>