force-app/main/default/objects/Lead/fields/Exp_Volume_invoice_in_next_12_12mon__c.field-meta.xml
<CustomField>
    <fullName>Exp_Volume_invoice_in_next_12_12mon__c</fullName>
    <label>Exp Volume invoice in next 12months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>