force-app/main/default/objects/Lead/fields/Expected_Date_for_first_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_for_first_Invoice__c</fullName>
    <label>Expected Date for first Invoice</label>
    <type>Date</type>
</CustomField>