force-app/main/default/objects/Lead/fields/Expected_Nbr_invoice_in_next_12monhts__c.field-meta.xml
<CustomField>
    <fullName>Expected_Nbr_invoice_in_next_12monhts__c</fullName>
    <label>Expected Nbr invoice in next 12 months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>