force-app/main/default/objects/Lead/fields/Facility_Fees__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fees__c</fullName>
    <defaultValue>0.0075</defaultValue>
    <label>Facility Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>