force-app/main/default/objects/Lead/fields/Facility_Fees_To_Be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Facility_Fees_To_Be_Paid__c</fullName>
    <label>Facility Fees To Be Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Annual invoice volume</fullName>
            </value>
            <value>
                <fullName>Invoice face value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>