force-app/main/default/objects/Lead/fields/First_Invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>First_Invoice_amount__c</fullName>
    <defaultValue>500000</defaultValue>
    <inlineHelpText>the first expected invoice amount from the the customer forecast</inlineHelpText>
    <label>Average Invoice Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>