force-app/main/default/objects/Lead/fields/Follower__c.field-meta.xml
<CustomField>
    <fullName>Follower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follower</label>
    <type>Checkbox</type>
</CustomField>