force-app/main/default/objects/Lead/fields/Funder_Type__c.field-meta.xml
<CustomField>
    <fullName>Funder_Type__c</fullName>
    <label>Funder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funder_Type</valueSetName>
    </valueSet>
</CustomField>