force-app/main/default/objects/Lead/fields/Id_Link_Report__c.field-meta.xml
<CustomField>
    <fullName>Id_Link_Report__c</fullName>
    <formula>HYPERLINK(&apos;https://incomlend.my.salesforce.com/&apos;+Id , Id, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Link Report</label>
    <type>Text</type>
</CustomField>