force-app/main/default/objects/Lead/fields/Indication_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Indication_Expired_Date__c</fullName>
    <label>Indication Expired Date</label>
    <type>Date</type>
</CustomField>