force-app/main/default/objects/Lead/fields/Industry_Sector__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sector__c</fullName>
    <label>Industry Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sector</valueSetName>
    </valueSet>
</CustomField>