force-app/main/default/objects/Lead/fields/Insured_by__c.field-meta.xml
<CustomField>
    <fullName>Insured_by__c</fullName>
    <inlineHelpText>Insurance provider for the Credit Limit</inlineHelpText>
    <label>Insured by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atradius</fullName>
            </value>
            <value>
                <fullName>BCC Trade Credit Pty Ltd - Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>FCI-NFC</fullName>
            </value>
            <value>
                <fullName>ICEIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>