force-app/main/default/objects/Lead/fields/Insurer_actual_response_date__c.field-meta.xml
<CustomField>
    <fullName>Insurer_actual_response_date__c</fullName>
    <label>Insurer actual response date</label>
    <type>Date</type>
</CustomField>