force-app/main/default/objects/Lead/fields/Interest_In_trade_Finance__c.field-meta.xml
<CustomField>
    <fullName>Interest_In_trade_Finance__c</fullName>
    <label>Interest In trade Finance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, already invested</fullName>
            </value>
            <value>
                <fullName>Yes, knowledgeable</fullName>
            </value>
            <value>
                <fullName>Yes, needs education</fullName>
            </value>
            <value>
                <fullName>No, no alternatives</fullName>
            </value>
            <value>
                <fullName>No, can’t invest in RAIF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>