force-app/main/default/objects/Lead/fields/Investment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Investment_Currency__c</fullName>
    <label>Investment Currency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCY</valueSetName>
    </valueSet>
</CustomField>