force-app/main/default/objects/Lead/fields/Lead_Co_Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead_Co_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead / Co-Lead</label>
    <type>Checkbox</type>
</CustomField>