force-app/main/default/objects/Lead/fields/Lead_origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_origin__c</fullName>
    <label>Lead origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>