force-app/main/default/objects/Lead/fields/Lead_Owner_email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner email</label>
    <type>Text</type>
</CustomField>