force-app/main/default/objects/Lead/fields/Mail_send_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Mail_send_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mail CL approved send , automatic form a wrokflow rules</description>
    <inlineHelpText>when the mail for CL approved has been sent to the supplier</inlineHelpText>
    <label>Mail CL send Supplier</label>
    <type>Checkbox</type>
</CustomField>