force-app/main/default/objects/Lead/fields/Maintenance_of_dedicated_bank_account__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_of_dedicated_bank_account__c</fullName>
    <defaultValue>3000</defaultValue>
    <inlineHelpText>Please enter 3000 for Yearly fees and 750 for quaterly fees.</inlineHelpText>
    <label>Maintenance of dedicated bank account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>