force-app/main/default/objects/Lead/fields/Mass_Buyer_Upload_Id__c.field-meta.xml
<CustomField>
    <fullName>Mass_Buyer_Upload_Id__c</fullName>
    <label>Mass Buyer Upload Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>