force-app/main/default/objects/Lead/fields/Mass_Upload__c.field-meta.xml
<CustomField>
    <fullName>Mass_Upload__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mass Upload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>