force-app/main/default/objects/Lead/fields/Min_Investment_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Min_Investment_Ticket__c</fullName>
    <label>Min Investment Ticket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>