force-app/main/default/objects/Lead/fields/Minimum_AUM_requirement__c.field-meta.xml
<CustomField>
    <fullName>Minimum_AUM_requirement__c</fullName>
    <label>Minimum AUM requirement:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>other AUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>