force-app/main/default/objects/Lead/fields/Minimum_Track_Record__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Track_Record__c</fullName>
    <label>Minimum Track Record:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>other years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>