force-app/main/default/objects/Lead/fields/New_Increase__c.field-meta.xml
<CustomField>
    <fullName>New_Increase__c</fullName>
    <label>New / Increase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>Re-Apply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>