force-app/main/default/objects/Lead/fields/Notes_Callbox__c.field-meta.xml
<CustomField>
    <fullName>Notes_Callbox__c</fullName>
    <label>Notes Callbox</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>