force-app/main/default/objects/Lead/fields/One_time_fees_for_opening_dedicated_bank__c.field-meta.xml
<CustomField>
    <fullName>One_time_fees_for_opening_dedicated_bank__c</fullName>
    <defaultValue>1500</defaultValue>
    <label>One time fees for opening dedicated bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>