force-app/main/default/objects/Lead/fields/Other_Goods_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Goods_and_Services__c</fullName>
    <label>Goods and Services (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>