force-app/main/default/objects/Lead/fields/Other_MSG_Options__c.field-meta.xml
<CustomField>
    <fullName>Other_MSG_Options__c</fullName>
    <label>Other MSG Options :</label>
    <length>128</length>
    <type>Text</type>
</CustomField>