force-app/main/default/objects/Lead/fields/Other_Sector__c.field-meta.xml
<CustomField>
    <fullName>Other_Sector__c</fullName>
    <label>Sector (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>