force-app/main/default/objects/Lead/fields/Platform_Origin__c.field-meta.xml
<CustomField>
    <fullName>Platform_Origin__c</fullName>
    <inlineHelpText>Origin of the lead</inlineHelpText>
    <label>Platform Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomlend</fullName>
            </value>
            <value>
                <fullName>Shipfin</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>