force-app/main/default/objects/Lead/fields/Platfrom_Origin__c.field-meta.xml
<CustomField>
    <fullName>Platfrom_Origin__c</fullName>
    <label>Platform Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomlend</fullName>
            </value>
            <value>
                <fullName>Shipfin</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>