force-app/main/default/objects/Lead/fields/Potential_Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Potential_Investment_Amount__c</fullName>
    <label>Potential Investment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>