force-app/main/default/objects/Lead/fields/Potential_Supplier_s__c.field-meta.xml
<CustomField>
    <fullName>Potential_Supplier_s__c</fullName>
    <label>Potential trade partner (s)</label>
    <type>TextArea</type>
</CustomField>