force-app/main/default/objects/Lead/fields/Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Processing Fees Per Trade Partner</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>