force-app/main/default/objects/Lead/fields/Product_Funding__c.field-meta.xml
<CustomField>
    <fullName>Product_Funding__c</fullName>
    <label>Product Funding</label>
    <length>50</length>
    <type>Text</type>
</CustomField>