force-app/main/default/objects/Lead/fields/Product_type__c.field-meta.xml
<CustomField>
    <fullName>Product_type__c</fullName>
    <label>Customer Type_</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supplier Factoring</fullName>
            </value>
            <value>
                <fullName>Buyer Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>Buyer Factoring</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Funder</fullName>
            </value>
            <value>
                <fullName>RAIF</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Supplier Reverse Factoring</fullName>
                <isActive>false</isActive>
                <label>Supplier Reverse Factoring</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>