force-app/main/default/objects/Lead/fields/Product_Type_Funding__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Funding__c</fullName>
    <inlineHelpText>Type of investment Product they provide</inlineHelpText>
    <label>Product Type Funding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_type_Funding</valueSetName>
    </valueSet>
</CustomField>