force-app/main/default/objects/Lead/fields/Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Number__c</fullName>
    <inlineHelpText>Registration Number</inlineHelpText>
    <label>Registration Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>